fix type mismatches